done: Fixed white space on right of feat-projs section

--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,12 @@ hr {
   height: 100vh;
   width: 100vw;
   word-wrap: break-word;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.bio-story{
+
 }
 
 .logo {
@@ -238,9 +244,19 @@ hr {
 
 
 footer {
-    margin-right: 10px;
-    margin-left: 10px;
+    /* margin-right: 10px;
+    margin-left: 10px; */
     text-align: center;
+    background-color: #337ab7;
+    color: black;
+}
+
+footer a{
+  color: black;
+}
+
+.hr-line{
+  margin: 0;
 }
 
 .bio-contact{
@@ -297,8 +313,8 @@ video{
 /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 .flip-card {
   background-color: transparent;
-  width: 300px;
-  height: 300px;
+  width: 350px;
+  height: 250px;
   /* border: 1px solid #f1f1f1; */
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
   border-radius: 25px;
@@ -336,8 +352,8 @@ video{
 }
 
 .card_preview{
-  width: 300px;
-  height: 300px;
+  width: 350px;
+  height: 250px;
   border-radius: 25px;
 }
 
